feat: update swagger api doc.
